# sunday

./: .env.example  .gitignore  CONTRIBUTING.md  CONTRIBUTING_AGENTS.md  LICENSE  Makefile  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
core/: pyproject.toml  test_manager.py
core/sunday/: main.py
core/sunday/agents/: base.py  manager.py
core/sunday/agents/coding/: __init__.py  agent.py  tools.py
core/sunday/agents/memory/: __init__.py  agent.py
core/sunday/agents/research/: __init__.py  agent.py  tools.py
core/sunday/agents/secretary/: agent.py  prompts.py
core/sunday/agents/tools/: __init__.py  agent.py  builtins.py  python_repl.py  registry.py
core/sunday/api/: app.py
core/sunday/api/middleware/: errors.py
core/sunday/api/routes/: chat.py  conversations.py  health.py  settings.py
core/sunday/api/websocket/: handler.py
core/sunday/config/: constants.py  settings.py
core/sunday/core/llm/: __init__.py  base.py  providers.py  router.py
core/sunday/core/voice/: __init__.py  stt.py  tts.py  vad.py
core/sunday/database/: engine.py  vector.py
core/sunday/models/: messages.py
core/sunday/utils/: audio.py  logging.py
core/tests/: conftest.py
core/tests/test_api/: test_health.py
core/tests/test_core/: test_llm_router.py
docs/: ARCHITECTURE.md  HANDOFF.md  ROADMAP.md  SETUP.md
gui/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
gui/src/: App.tsx
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/src/: lib.rs  main.rs
scripts/: check.sh  scaffold-gui.sh  setup.sh
(+15 files in other folders)
